# DLM-mmdit

./: .env.example  .gitignore  README.md  eval_samples.sh  pyproject.toml  sample_l2t.sh  sample_lsme.sh  sample_mmdit_latent.sh  train_baseline.sh  train_baseline_latent.sh  train_latentDLM_mmdit.sh  train_mmdit_latent.sh
.claude/commands/: 01-literature-search.md  02-research-gap.md  03-gap-solve.md  04-spec-novel.md  04b-counter-think.md  05-build-code.md  06-run-experiments.md  07-write-paper.md  08-review-loop.md  README.md
Overleaf/: neurips_2025.sty  neurips_2025.tex  references.bib  template.tex
Overleaf/%OUTDIR%/: neurips_2025.aux  neurips_2025.bbl  neurips_2025.blg  neurips_2025.fdb_latexmk  neurips_2025.fls  neurips_2025.out
baseline/: __init__.py  compute_clusters.py  diffusion_process.py  modeling.py  sampling.py  train.py  trainer.py
baseline/configs/: mdlm.yaml  mdlm_rwkv.yaml
baseline/eval/: generate_samples.py  self_correction.py
baseline/models/: dit_rwkv.py
baseline/specs/: ar.md  gidd.md  hdlm.md  mdlm.md
baseline_latent/: checkpoints.py  diffusion_process.py  modeling_latent.py  train_cross_dit.py  train_latent_dit.py  trainer_latent.py
baseline_latent/configs/: mdlm_cross_attention.yaml  mdlm_latent.yaml
baseline_latent/eval/: loss.py
baseline_latent/models/: dit_cross_attention.py  dit_latent.py
baseline_latent/specs/: mdlm_latent.md  (+1 more)
docs/: gap_solutions.md  literature.md  openreview_analysis.md  research_gap.tex
latentDLM_mmdit/: checkpoints_mmdit.py  continuous_diffusion.py  data_simple.py  diffusion_process.py  improved_trainer.py  improved_trainer_stable.py  loss_mmdit.py  modeling_mmdit.py  sample_l2t_fixed.py  sample_t2l_fixed.py  train_mmdit.py  train_mmdit_stable.py  trainer_multimodal.py
latentIMG_mmdit/: README  requirements.txt  train_image_continuous.py  train_image_discrete.py
lsme/: README.md  __init__.py  sample_lsme.py
mmdit_latent/: cleanup_jsonl.py  data_simple.py  download_models.py  loss.py  merge_shards.py  modeling_latent.py  preprocess_data.py  sampling.py  train_latent_dit.py  trainer_latent.py
paper/: build.sh  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib  supp.tex
preprocessed_data/: prepare_data_multi_gpu.py  test.py
scripts/: generate_figure.py  train.sh
(+83 files in other folders)
