
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mmdit"
description = "Hierarchical Diffusion Language Model"
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Cai Zhou"},
    {name = "Chenyu Wang"},
    {name = "Dinghuai Zhang"},
    {name = "Shangyuan Tong"},
    {name = "Yifei Wang"},
    {name = "Stephen Bates"},
    {name = "Tommi Jaakkola"}    
]
dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "transformers>=4.45.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "datasets>=3.0.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.25.0",
    "wandb>=0.18.0",
    "tqdm>=4.66.0",
    "sentencepiece>=0.2.0",
    "evaluate>=0.4.0",
    "scipy>=1.14.0",
    "heavyball>=1.4.0",
    "accelerate>=1.3.0",
    "pyyaml",
    "pygments",
    "jinja2",
    "markdown",
    "werkzeug",
    "pillow",
    "beautifulsoup4",
    "protobuf",
    "regex",
    "safetensors",
    "tokenizers",
    "filelock",
    "typer",
    "rich",
    "click",
    "joblib",
    "scikit-learn",
    "opt-einsum",
    "pyarrow",
    "dill",
    "xxhash",
    "multiprocess",
    "tensorboard",
    "ipython",
    "ipykernel",
    "notebook",
    "pytest",
    "librosa",
    "soundfile",
    "audioread",
    "spacy",
    "zarr",
    "jsonschema",
    "packaging",
    "requests",
    "urllib3",
    "httpx",
    "anyio",
    "certifi",
    "idna",
    "charset-normalizer",
    "sympy",
    "fsspec",
    "aiohttp",
    "yarl",
    "multidict",
    "frozenlist",
    "attrs",
    "psutil",
    "nvtx",
    "sentence-transformers",
    "tornado",
    "jupyterlab",
    "nbconvert",
    "nbclient",
    "jupyter-server",
    "jupyter-client",
    "jupyter-core",
    "terminado",
    "prometheus-client",
    "websocket-client",
    "Send2Trash",
    "webencodings",
    "tinycss2",
    "bleach",
    "defusedxml",
    "pandocfilters",
    "nbformat",
    "nest-asyncio",
    "pytest-xdist",
    "gitpython",
    "smmap",
    "gitdb",
    "sentry-sdk",
    "numba",
    "llvmlite",
    "numcodecs",
]

[tool.setuptools]
packages = ["mmdit_latent", "latentDLM_mmdit", "lsme", "baseline", "baseline_latent"]
